# butaman

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  hosts.csv  main.rs  tmp.rs
butaman-backend/: Cargo.toml  Dockerfile
butaman-backend/src/: file_loader.rs  main.rs  output.rs
butaman-frontend/: .env.production  Dockerfile  index.html  package.json  vite.config.js
butaman-frontend/src/: App.jsx
src/: main.rs  output.rs  ping.rs
